--- a/book style.css
+++ b/book style.css
@@ -17,6 +17,117 @@ body {
     /* height: 1200vh; */
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border: 2px solid black; */
+  }
+  .img{
+    height: 500px;
+
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;/* border: 2px solid black; */
+    width: 1000px;
+    /* margin-bottom: 100px; */
+  }
+  .text h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(7,61, 61);
+  }
+.h6{
+font-family: poppins,sans-serif;
+}
+.img{
+  box-shadow: 0px 13px 33px 0px rgba(0,0,0,0.57);
+-webkit-box-shadow: 0px 13px 33px 0px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 13px 33px 0px rgba(0,0,0,0.57);
+}
+.box{
+  border: 0.2px solid grey;
+  height: 240px;
+  width: 309px;
+  margin-top: -100px;
+  box-shadow: -2px 4px 5px 2px rgba(0,0,0,0.33);
+-webkit-box-shadow: -2px 4px 5px 2px rgba(0,0,0,0.33);
+-moz-box-shadow: -2px 4px 5px 2px rgba(0,0,0,0.33); 
+}
+p{
+  font-weight: 400;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.price{
+  display: flex;
+  align-items: center;
+}
+.pr{
+  margin-left:10px;
+  font-weight:500;
+}
+/* .cart{
+  background-color: #f3af32;
+  width: 87%;
+  margin-left: 10px; 
+} */
+.down{
+  margin-top:12px;
+  background-color: #f3af32;
+  width: 87%;
+  margin-left: 10px;
+}
+.byu{
+  margin-top:16px;
+  background-color: #f3af32;
+  width: 87%;
+  margin-left: 10px;
+}
+.Add-To-Cart{
+    margin-top:16px;
+    background-color: #f3af32;
+    width: 87%;
+    margin-left: 10px;
+    border: none;
+  text-decoration:none;
+  color:black;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.cart-btn{
+  margin-left:30px;
+  text-decoration:none;
+  color:black;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+.buy{
+  margin-left:10px;
+  font-size: large;
+  font-weight:500;
+}
+.about{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: larger;
+  font-weight:600;
+}
+.page-pic{
+  width: 50px;
+  height:50px;
+}
+.line{
+  width: 1%;
+  background-color: black;
+}
+.column{
+  display: flex;
+}
+
+
+
+
+
+
 
 .section-1 {
     /* border: 1px solid red; */
@@ -58,11 +169,11 @@ body {
     margin-left: 25px;
 }
 
-.login,
-.register {
+.login-H,
+.register-H {
     text-transform: capitalize;
     background-color: #f07c29;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 25px 10px 25px;
     border-radius: 7px;
     color: white;
     font-weight: 560;
@@ -80,7 +191,6 @@ body {
 }
 .cart-anchor{
     color: #f07c29;
-    text-decoration: none;
 }
 .cart-div {
     display: flex;
@@ -252,6 +362,7 @@ li:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .bar-cart {
@@ -329,354 +440,7 @@ li:hover {
 
 
 
-/* nav-done ⬆️⬆️⬆️ */
-
-
-
-
-
-
-/* filter code ⬇️⬇️⬇️ */
-.container {
-    /* border: 1px solid red; */
-    width: 85%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#search-div {
-    margin-top: 20px;
-}
-
-/* .form-control {
-    width: 200px;
-    height: 40px;
-    border: 2px solid #f07c29;
-} */
-.input-container {
-    width: 220px;
-    position: relative;
-}
-
-.icon {
-    position: absolute;
-    right: 10px;
-    top: calc(50% + 5px);
-    transform: translateY(calc(-50% - 5px));
-}
-
-.input {
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    transition: .2s linear;
-    border: 2.5px solid black;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-.input:focus {
-    outline: none;
-    border: 0.5px solid #f07c29;
-    box-shadow: -5px -5px 0px #f07c29;
-}
-
-.input-container:hover>.icon {
-    animation: anim 1s linear infinite;
-}
-
-@keyframes anim {
-
-    0%,
-    100% {
-        transform: translateY(calc(-50% - 5px)) scale(1);
-    }
-
-    50% {
-        transform: translateY(calc(-50% - 5px)) scale(1.1);
-    }
-}
-
-#grid-div {
-    width: 1100px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    /* grid-template-columns: auto auto auto auto auto; */
-    /* grid-gap: 15px; */
-    row-gap: 19px;
-    margin: 0 auto;
-    margin-top: 20px;
-    /* border: 1px solid rgb(0, 0, 0); */
-}
-
-.card {
-    position: relative;
-    width: 200px;
-    height: 350px;
-    margin: 0 auto;
-    border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border: 0;
-    transition: 0.25s ease-in;
-}
-
-.card:hover,
-.card:focus-within {
-    box-shadow: 0 0 0 2px #f07c29, 0 10px 60px 0 rgba(0, 0, 0, 0.1);
-    transform: translatey(-5px);
-}
-
-.card:active {
-    border: 1px solid #000000;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, .2);
-}
-
-.card-body {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    margin: 0 auto;
-    border-radius: 6px;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, .2); */
-    /* border: 1px solid rgb(255, 0, 0); */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.imgBx {
-    /* border: 1px solid green; */
-    width: 90%;
-    height: 65%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 5px;
-}
-
-.anc {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.img {
-    width: 100%;
-    height: 100%;
-    border-radius: 6px;
-}
-
-.img:hover {
-    transition: all 0.5s ease-in;
-    transform: scale(1.04);
-    box-shadow: 0 51px 30px rgba(0, 0, 0, .2);
-}
-
-
-.details {
-    /* border: 1px solid blue; */
-    width: 90%;
-    height: 50px;
-    text-align: left;
-    height: fit-content;
-}
-
-#h5 {
-    font-weight: 600;
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-}
-
-#p {
-    font-size: 16px;
-    /* border: 1px solid red; */
-}
-
-#price {
-    font-weight: 600;
-    font-size: 15px;
-}
-
-.line {
-    width: 90%;
-    height: 1px;
-    background-color: #7878783b;
-    ;
-    margin-top: 2px;
-}
-
-.viewers-published {
-    /* border: 1px solid rgb(0, 0, 0); */
-    /* border-top: 1px solid #ddd; */
-    width: 90%;
-    height: 25px;
-    text-align: left;
-    display: flex;
-    align-items: center;
-}
-
-.views {
-    height: 100%;
-    width: 32%;
-    /* border: 1px solid blue; */
-    display: flex;
-    align-items: center;
-    /* justify-content: space-between; */
-    font-size: 12px;
-    color: #222222;
-}
-
-.published {
-    height: 100%;
-    width: 55%;
-    /* border: 1px solid blue; */
-    display: flex;
-    align-items: center;
-    /* justify-content: space-around; */
-    font-size: 12px;
-    color: #222222;
-}
-
-
-@media only screen and (max-width:1134px) {
-    #grid-div {
-        border: 1px solid rgb(255, 255, 255);
-        width: 850px;
-        grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-    }
-}
-
-@media only screen and (max-width:975px) {
-    #grid-div {
-        width: 800px;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-
-
-    }
-}
-
-@media only screen and (max-width:825px) {
-    #grid-div {
-        width: 700px;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-
-
-    }
-}
-
-@media only screen and (max-width:693px) {
-    #grid-div {
-        width: 520px;
-        grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-    }
-}
-
-@media only screen and (max-width:590px) {
-    #grid-div {
-        width: 400px;
-        grid-column-gap: 10px;
-        grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-    }
-}
-
-@media only screen and (max-width:500px) {
-    #grid-div {
-        width: 400px;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
-
-    .card {
-        width: 170px;
-    }
-
-
-
-}
-
-
-@media only screen and (max-width:416px) {
-    #grid-div {
-        width: 350px;
-        grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-    }
-
-
-}
-
-@media only screen and (max-width:378px) {
-    #grid-div {
-        width: 350px;
-        grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-        /* border: 1px solid red; */
-    }
-
-    .card {
-        width: 130px;
-    }
-
-
-
-    #h5 {
-
-        font-size: 13px;
-    }
-
-    #p {
-
-        font-size: 11px;
-
-    }
-
-    #price {
-
-        font-size: 11px;
-    }
-
-    .viewers-published {
-        justify-content: space-around;
-    }
-
-    .views {
-        width: 37%;
-        font-size: 11px;
-    }
-
-    .published {
-        height: 100%;
-        font-size: 11px;
-    }
-}
-
-
-/* filter code ⬆️⬆️⬆️ */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* /* nav-done ⬆️⬆️⬆️ * */
 
 .footer {
     margin-top: 100px;
@@ -917,6 +681,9 @@ li:hover {
     color: rgba(255, 255, 255, 0.966);
     font-weight: 500;
 }
+
+
+
 
 
 
