--- a/contact-Admin-style.css
+++ b/contact-Admin-style.css
@@ -178,7 +178,29 @@ body {
 
 }
 
-
+.delete-edit-div{
+    /* border: 1px solid red; */
+    /* width: 20%; */
+    /* height: 10; */
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.EDIT,.DELETE{
+    text-transform: capitalize;
+    background-color: #f07c29;
+    padding: 3px 10px 3px 10px;
+    color: white;
+    font-weight: 560;
+    border: 1px solid #f07c29;
+    outline: 0;
+    /* margin-top: 20px; */
+}
+.EDIT:focus,.DELETE:focus {
+    border: 1px solid orange;
+    box-shadow: 0px 0px 2px 2px rgba(255, 166, 0, 0.555);
+}
 
 
 
